; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_fs-util.c_unsafe_transition.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_fs-util.c_unsafe_transition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.stat*, %struct.stat*)* @unsafe_transition to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unsafe_transition(%struct.stat* %0, %struct.stat* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.stat*, align 8
  %5 = alloca %struct.stat*, align 8
  store %struct.stat* %0, %struct.stat** %4, align 8
  store %struct.stat* %1, %struct.stat** %5, align 8
  %6 = load %struct.stat*, %struct.stat** %4, align 8
  %7 = getelementptr inbounds %struct.stat, %struct.stat* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

11:                                               ; preds = %2
  %12 = load %struct.stat*, %struct.stat** %4, align 8
  %13 = getelementptr inbounds %struct.stat, %struct.stat* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.stat*, %struct.stat** %5, align 8
  %16 = getelementptr inbounds %struct.stat, %struct.stat* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = icmp ne i64 %14, %17
  %19 = zext i1 %18 to i32
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %11, %10
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
